--- a/core/term/dune
+++ b/core/term/dune
@@ -1,6 +1,7 @@
 (library
  (name kappa_terms)
- (libraries kappa_mixtures)
+ (libraries kappa_mixtures landmarks)
+ (preprocess (pps landmarks.ppx --auto))
  (public_name kappa-library.terms)
  (flags (:standard -w @a
           -open Kappa_generic_toolset
