--- a/core/grammar/dune
+++ b/core/grammar/dune
@@ -1,7 +1,8 @@
 (library
   (name kappa_grammar)
   (libraries yojson result lwt
-    kappa-library.generic kappa-library.runtime)
+    kappa-library.generic kappa-library.runtime landmarks)
+ (preprocess (pps landmarks.ppx --auto))
   (flags (:standard -w @a
     -open Kappa_generic_toolset
     -open Kappa_mixtures
