--- a/core/simulation/dune
+++ b/core/simulation/dune
@@ -1,6 +1,7 @@
 (library
  (name kappa_runtime)
- (libraries kappa_terms)
+ (libraries kappa_terms landmarks)
+ (preprocess (pps landmarks.ppx --auto))
  (public_name kappa-library.runtime)
  (flags (:standard -w @a
           -open Kappa_generic_toolset
